Added bootstrap & styling Now including a header in the 2 tempaltes

--- a/src/main/resources/web-server/templates/account.html
+++ b/src/main/resources/web-server/templates/account.html
@@ -1,29 +1,40 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:insert="header :: copy">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Account list</title>
+    <title>Account details</title>
 </head>
+
 <body>
-<p>Current selected account:</p>
-<div>
-    <table>
-        <thead>
-        <tr>
-            <th>Account id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        <td th:text="${account.id}">Id</td>
-        <td th:text="${account.firstName}">First Name</td>
-        <td th:text="${account.lastName}">Last Name</td>
-        </tbody>
-    </table>
+<div class="container">
+    <div class="starter-template">
+        <h1>Account Details</h1>
+
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">Account id</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>
+                    <a href="account.html"
+                       th:href="@{|/${account.id}|}"
+                       th:text="|${account.id}|"></a>
+                </td>
+
+                <td th:text="${account.firstName}">First Name</td>
+                <td th:text="${account.lastName}">Last Name</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
